# spinetoolbox-dev

./: README.md  setup.cfg  setup.py
