[metadata]
author = Erkka Rinne
author_email = erkka.rinne@vtt.fi
description = Installs latest development version of Spine Toolbox
license = UNLICENSE
name = spinetoolbox-dev
version = 1.0.a1

[options]
install_requires =
  spinedb_api @ git+https://github.com/Spine-project/Spine-Database-API
  spine_engine @ git+https://github.com/Spine-project/spine-engine
  spine-items @ git+https://github.com/Spine-project/spine-items
  spinetoolbox @ git+https://github.com/Spine-project/Spine-Toolbox

[options.entry_points]
console_scripts =
    spinetoolbox=spinetoolbox.main:main
    spine-db-editor=spinetoolbox.spine_db_editor.main:main
